# ipckit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_zh.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-wheels.yml  ci.yml  pr-checks.yml  release.yml  security-audit.yml
crates/ipckit/: Cargo.toml
crates/ipckit-cli/: Cargo.toml
crates/ipckit-cli/src/: main.rs
crates/ipckit-cli/src/commands/: bench.rs  completions.rs  create.rs  generate.rs  info.rs  listen.rs  mod.rs  monitor.rs  send.rs  serve.rs
crates/ipckit-macros/: Cargo.toml
crates/ipckit-macros/src/: lib.rs
crates/ipckit/src/: api_server.rs  async_channel.rs  channel.rs  cli_bridge.rs  error.rs  event_stream.rs  file_channel.rs  graceful.rs  lib.rs  local_socket.rs  metrics.rs  pipe.rs  python.rs  resource_link.rs  shm.rs  socket_server.rs  task_manager.rs  thread_channel.rs  thread_pump.rs  unix.rs  waker.rs  windows.rs
crates/ipckit/src/bindings/: api_server.rs  channel.rs  cli_bridge.rs  event_stream.rs  graceful.rs  json_utils.rs  metrics.rs  mod.rs  pipe.rs  shm.rs  socket.rs  task_manager.rs
examples/frontend/: backend_server.py  desktop_webview.py  file_ipc_backend.py  file_ipc_frontend.html  file_ipc_frontend.py  frontend_client.py  index.html
examples/python/: channel_example.py  pipe_example.py  shared_memory_example.py
examples/rust/: channel_example.rs  pipe_example.rs  shm_example.rs
python/ipckit/: __init__.py  __init__.pyi
tests/: conftest.py  test_api_server.py  test_channel.py  test_cli_bridge.py  test_graceful.py  test_metrics.py  test_pipe.py  test_shm.py
